<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="tuyosi_wada_music.outlook.jp.imacoconya_n.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultValue"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/altitude" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout4"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bearing"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout5"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout6">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout6"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout7">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accuracy"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout7"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout8">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastTransmissionTime"/>

        <TextView
            android:id="@+id/txtLast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultValue"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout8"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout9">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nowAddress"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout9"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nowCity"/>

        <TextView
            android:id="@+id/txtCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultValue"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout10"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout11">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tweet"/>

    </LinearLayout>

    <TextView
        android:id="@+id/txtAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultValue"
        android:layout_above="@+id/linearLayout10"
        android:layout_alignEnd="@+id/linearLayout10" />

    <TextView
        android:id="@+id/txtTweet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultValue"
        android:layout_alignTop="@+id/linearLayout11"
        android:layout_alignStart="@+id/txtAddress" />

    <TextView
        android:id="@+id/txtAccuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultValue"
        android:layout_below="@+id/linearLayout6"
        android:layout_alignStart="@+id/txtAddress" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtAccuracy"
        android:layout_alignStart="@+id/txtAccuracy"
        android:id="@+id/linearLayout12">

        <TextView
            android:id="@+id/txtSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultValue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speedUnit"/>

    </LinearLayout>

    <TextView
        android:id="@+id/txtBearing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultValue"
        android:layout_below="@+id/linearLayout4"
        android:layout_alignStart="@+id/linearLayout12" />

    <TextView
        android:id="@+id/txtAltitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultValue"
        android:layout_above="@+id/txtBearing"
        android:layout_alignStart="@+id/txtBearing" />

    <TextView
        android:id="@+id/txtLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultValue"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignStart="@+id/txtAltitude" />

    <TextView
        android:id="@+id/txtLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultValue"
        android:layout_below="@+id/linearLayout"
        android:layout_alignStart="@+id/txtLongitude" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autoPostCheck"
        android:id="@+id/checkBox"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="50dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autoImacoco"
        android:id="@+id/checkBox2"
        android:layout_alignTop="@+id/checkBox"
        android:layout_centerHorizontal="true" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_start_Button"
        android:layout_marginBottom="100dp"
        android:layout_above="@+id/checkBox"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textOff="@string/startButton"
        android:textOn="@string/stopButton"
        android:focusableInTouchMode="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showMapButton"
        android:id="@+id/map_button"
        android:layout_above="@+id/checkBox"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="50dp"
        android:layout_alignEnd="@+id/main_start_Button" />

</RelativeLayout>
