<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="id_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_account_id" />

    <EditTextPreference
        android:capitalize="words"
        android:inputType="textPassword"
        android:key="pass_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_account_pass" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="60"
        android:entries="@array/pref_auto_list_titles"
        android:entryValues="@array/pref_auto_list_values"
        android:key="auto_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_auto" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_icon_list_titles"
        android:entryValues="@array/pref_icon_list_values"
        android:key="icon_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_icon" />

</PreferenceScreen>
